--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,3 @@
-
 name: tactical_military_store
 description: Tactical Military Store - Wholesale & Retail
 publish_to: 'none'
@@ -10,35 +9,51 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   # ===== File utils =====
   path: ^1.9.0
+
   # ===== State Management =====
   provider: ^6.1.5
+
   # ===== Local Storage =====
   shared_preferences: ^2.2.2
+
   # ===== Localization =====
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+
   # ===== Biometric =====
   local_auth: ^2.2.0
+
   # ===== External Apps (WhatsApp / Browser) =====
   url_launcher: ^6.3.0
+
+  # ===== 🚀 Fast Image Caching (IMPORTANT) =====
+  cached_network_image: ^3.3.1
+
   # ===== Icons =====
   cupertino_icons: ^1.0.8
+
   # ===== Firebase =====
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.1
   cloud_firestore: ^4.17.5
   firebase_auth_web: ^5.8.14
+
   # ===== Supabase =====
   supabase_flutter: ^1.0.0
+
   # ===== Logger =====
   logger: ^1.1.0
+
   # ===== Image Picker =====
   image_picker: ^0.8.6
+
   # ===== Sign in with Apple =====
   sign_in_with_apple: ^6.1.0
+
   # ===== Webview =====
   webview_flutter: ^4.0.7
 
@@ -46,13 +61,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+
   # ===== App Icon Generator =====
   flutter_launcher_icons: ^0.13.1
+
+  # ===== Native Splash =====
   flutter_native_splash: ^2.3.2
 
 flutter:
   uses-material-design: true
   generate: true
+
   # ===== Assets =====
   assets:
     - assets/icon/
@@ -60,6 +79,7 @@ flutter:
     - assets/textures/
     - assets/logo1.jpg
     - assets/logo2.jpg
+
   # ===== Fonts =====
   fonts:
     - family: Rajdhani
@@ -76,4 +96,3 @@ flutter_launcher_icons:
   image_path: "assets/icon/app_icon.png"
   adaptive_icon_background: "#FFFFFF"
   adaptive_icon_foreground: "assets/icon/app_icon.png"
-
