--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,72 +1,105 @@
 name: tactical_military_store
 description: Tactical Military Store - Wholesale & Retail
 publish_to: 'none'
+
 version: 1.0.0+2
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
+# ============================================================
+# ✅ Dependencies
+# ============================================================
+
 dependencies:
   flutter:
     sdk: flutter
 
-  # ===== File utils =====
+  # ===== Core Utils =====
   path: ^1.9.0
 
   # ===== State Management =====
   provider: ^6.1.5
 
-  # ===== Local Storage =====
+  # ===== Local Storage (Settings Toggles + Currency) =====
   shared_preferences: ^2.2.2
 
-  # ===== Localization =====
+  # ===== Localization (Arabic + English) =====
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
 
-  # ===== Biometric =====
+  # ===== Biometric Authentication =====
   local_auth: ^2.2.0
 
-  # ===== External Apps (WhatsApp / Browser) =====
+  # ===== External Links (WhatsApp / Browser / Domain) =====
   url_launcher: ^6.3.0
 
-  # ===== 🚀 Fast Image Caching (IMPORTANT) =====
+  # ===== Fast Image Caching =====
   cached_network_image: ^3.3.1
 
   # ===== Icons =====
   cupertino_icons: ^1.0.8
 
-  # ===== Firebase =====
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.1
-  cloud_firestore: ^4.17.5
-  firebase_auth_web: ^5.8.14
+  # ⭐ Social Icons (WhatsApp / Instagram / Facebook)
+  font_awesome_flutter: ^10.7.0
 
-  # ===== Supabase =====
-  supabase_flutter: ^1.0.0
+  # ============================================================
+  # ✅ Supabase Backend (Main Database + Auth)
+  # ============================================================
+  supabase_flutter: ^2.3.4
 
   # ===== Logger =====
-  logger: ^1.1.0
+  logger: ^2.4.0
 
-  # ===== Image Picker =====
-  image_picker: ^0.8.6
+  # ===== Pick Images (Profile Avatar + Admin Upload) =====
+  image_picker: ^1.1.2
 
-  # ===== Sign in with Apple =====
-  sign_in_with_apple: ^6.1.0
+  # ===== File Upload Support (Web + Mobile) =====
+  file_picker: ^8.0.6
 
-  # ===== Webview =====
-  webview_flutter: ^4.0.7
+  # ===== Animations (Professional UI) =====
+  animations: ^2.0.11
+
+  # ===== Shimmer Loading Effect =====
+  shimmer: ^3.0.0
+
+  # ===== Responsive UI (Mobile + Web) =====
+  flutter_screenutil: ^5.9.3
+
+  # ===== Secure Storage (Tokens + Sensitive Data) =====
+  flutter_secure_storage: ^9.2.2
+
+  # ===== Internet Connection Checker =====
+  connectivity_plus: ^6.0.5
+
+  # ===== Payment Ready (Future Checkout) =====
+  flutter_stripe: ^11.0.0
+
+  # ===== WebView (For Policy Pages / Checkout) =====
+  webview_flutter: ^4.10.0
+
+
+# ============================================================
+# ✅ Dev Dependencies
+# ============================================================
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   flutter_lints: ^6.0.0
 
   # ===== App Icon Generator =====
   flutter_launcher_icons: ^0.13.1
 
-  # ===== Native Splash =====
-  flutter_native_splash: ^2.3.2
+  # ===== Splash Screen Generator =====
+  flutter_native_splash: ^2.4.1
+
+
+# ============================================================
+# ✅ Flutter Assets + Fonts
+# ============================================================
 
 flutter:
   uses-material-design: true
@@ -90,9 +123,25 @@ flutter:
         - asset: assets/fonts/Rajdhani-Bold.ttf
           weight: 700
 
+
+# ============================================================
+# ✅ App Launcher Icon
+# ============================================================
+
 flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/icon/app_icon.png"
   adaptive_icon_background: "#FFFFFF"
   adaptive_icon_foreground: "assets/icon/app_icon.png"
+
+
+# ============================================================
+# ✅ Splash Screen Setup
+# ============================================================
+
+flutter_native_splash:
+  color: "#0B0F14"
+  image: assets/icon/app_icon.png
+  android: true
+  ios: true
